--- a/nodejs/intro_node_pg/package.json
+++ b/nodejs/intro_node_pg/package.json
@@ -1,10 +1,10 @@
 {
   "name": "aula_node_postgres",
   "version": "1.0.0",
-  "description": "",
+  "description": "**Repositório utilizado na aula de introdução ao Node com Postgres e Sequelize**",
   "main": "index.js",
   "dependencies": {
-    "pg": "^7.8.1",
+    "pg": "^7.18.2",
     "sequelize": "^4.42.0"
   },
   "devDependencies": {},
