--- a/nodejs/intro_node_pg/package.json
+++ b/nodejs/intro_node_pg/package.json
@@ -4,10 +4,10 @@
   "description": "**Repositório utilizado na aula de introdução ao Node com Postgres e Sequelize**",
   "main": "index.js",
   "dependencies": {
+    "mysql2": "^2.3.3",
     "pg": "^7.18.2",
     "sequelize": "^4.42.0"
   },
-  "devDependencies": {},
   "scripts": {},
   "author": "",
   "license": "ISC"
